shopping-frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-dev-frontend-service
  namespace: shopping-dev-frontend
spec:
  selector:
    app: shopping-dev-frontend
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
